--- a/styels/style.css
+++ b/styels/style.css
@@ -240,3 +240,25 @@ header {
     margin-bottom: 40px;
 }
 
+/* Holidays Sale section styles */
+.section-heading{
+    width: 870px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.section-heading .section-sub-title{
+    margin-bottom: 16px;
+}
+.section-heading .section-title{
+   font-size: 60px;
+   margin-bottom: 28px;
+   & .red{
+    font-family: Merriweather;
+   }
+}
+
+.section-heading .section-description{
+    color: rgba(7, 2, 17, 0.60);
+    margin-bottom: 64px;
+}
